# turtlebot3_machine_learning

./: .gitignore
turtlebot3_auto_docking/: CMakeLists.txt  README.md  package.xml  setup.py
turtlebot3_auto_docking/ROS_package_changes/turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro
turtlebot3_auto_docking/ROS_package_changes/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_docking_station.launch
turtlebot3_auto_docking/ROS_package_changes/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
turtlebot3_auto_docking/ROS_package_changes/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_small_square/: model.sdf
turtlebot3_auto_docking/ROS_package_changes/turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot3_docking_station.world
turtlebot3_auto_docking/models/docking_mark/: model.config  model.sdf
turtlebot3_auto_docking/models/docking_mark/materials/scripts/: textures.material
turtlebot3_auto_docking/src/: data_gathering.py  dataset_generation.py  dataset_preparation.py  docking_station_gym.py  generate_dataset.py  handle_station.py  model_eval.py  pos_predictor_training.py  rl_motion_control.py  station_handler.py
turtlebot3_auto_parking/: README.md
